2023-07-21T01:41:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5617669090 # 624
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-21
* notice: last 14d: unq all: 6 32
* notice: prev accum: outdated-unq outdated-all / unq all: 186 414 / 206 445
* notice: next accum: outdated-unq outdated-all / unq all: 186 414 / 206 446
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-07-20]

2023-07-20T01:38:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5605893718 # 621
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
* notice: last 14d: unq all: 6 31
* notice: prev accum: outdated-unq outdated-all / unq all: 184 410 / 205 444
* notice: next accum: outdated-unq outdated-all / unq all: 186 414 / 206 445
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-07-05] / [2023-07-20]

2023-07-19T08:22:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5596752133 # 619
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-19
* notice: last 14d: unq all: 7 34
* notice: prev accum: outdated-unq outdated-all / unq all: 184 410 / 204 443
* notice: next accum: outdated-unq outdated-all / unq all: 184 410 / 205 444
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-19]

2023-07-18T16:26:58Z: