@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-21T01:41:14Z",
+  "timestamp" : "2023-07-21T08:22:16Z",
   "count_outdated" : 414,
   "uniques_outdated" : 186,
-  "count" : 446,
-  "uniques" : 206,
+  "count" : 447,
+  "uniques" : 207,
   "clones" : [
     {
       "timestamp": "2023-07-08T00:00:00Z",
@@ -118,6 +118,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
