@@ -1,3 +1,12 @@
+2023-07-21T08:22:16Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5620223587 # 625
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-21
+* notice: last 14d: unq all: 6 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 186 414 / 206 446
+* notice: next accum: outdated-unq outdated-all / unq all: 186 414 / 207 447
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-07-21]
+
 2023-07-21T01:41:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5617669090 # 624
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-21
